# strumyk

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
data/: example.yaml  schema.json
strumyk/: __init__.py  cli.py  semantic_validator.py  simulator.py  syntax_validator.py  validator.py
strumyk/data/: example.yaml  schema.json
tests/: test_cli.py  test_semantic_validator.py  test_simulator.py  test_syntax_validator.py
