[project]
name = "strumyk"
version = "0.1.0"
description = "Strumyk is a lightweight YAML-based domain-specific language (DSL) for modeling business processes using the formalism of workflow nets (WF-nets). It provides a human-readable syntax to describe states (places) and transitions."
authors = [{ name = "LA" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema~=4.25.0",
  "PyYAML~=6.0.2",
  "networkx~=3.4.2",
  "pytest~=8.4.1",
  "ruff>=0.12.2,<0.13.0",
  "coverage~=7.9.2"
]

[project.scripts]
strumyk-validate = "strumyk.cli:main"

[build-system]
requires = ["setuptools>=69.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.packages.find]
include = ["strumyk"]